; ModuleID = '/home/carl/AnghaBench/php-src/ext/pdo/extr_pdo_stmt.c_pdo_stmt_iter_get_key.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pdo/extr_pdo_stmt.c_pdo_stmt_iter_get_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.php_pdo_iterator = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @pdo_stmt_iter_get_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pdo_stmt_iter_get_key(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.php_pdo_iterator*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to %struct.php_pdo_iterator*
  store %struct.php_pdo_iterator* %7, %struct.php_pdo_iterator** %5, align 8
  %8 = load %struct.php_pdo_iterator*, %struct.php_pdo_iterator** %5, align 8
  %9 = getelementptr inbounds %struct.php_pdo_iterator, %struct.php_pdo_iterator* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, -1
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @ZVAL_NULL(i32* %13)
  br label %21

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = load %struct.php_pdo_iterator*, %struct.php_pdo_iterator** %5, align 8
  %18 = getelementptr inbounds %struct.php_pdo_iterator, %struct.php_pdo_iterator* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @ZVAL_LONG(i32* %16, i64 %19)
  br label %21

21:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @ZVAL_NULL(i32*) #1

declare dso_local i32 @ZVAL_LONG(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
